.provarCaches/00D6C0000000xA6UAI/objects/Integration_Files__c.object
<CustomObject>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Data__c</fullName>
        <label>Record Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>CFS</fullName>
                </value>
                <value>
                    <fullName>RCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Files</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Target_System__c</columns>
        <columns>File_Name__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Record_Data__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>Target_System__c</field>
            <operation>equals</operation>
            <value>CFS</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CFS</fullName>
        <columns>NAME</columns>
        <columns>Target_System__c</columns>
        <columns>File_Name__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_System__c</field>
            <operation>equals</operation>
            <value>CFS</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>CFS</label>
    </listViews>
    <listViews>
        <fullName>CFS_Daily_Searches</fullName>
        <columns>NAME</columns>
        <columns>Target_System__c</columns>
        <columns>File_Name__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_System__c</field>
            <operation>equals</operation>
            <value>CFS</value>
        </filters>
        <filters>
            <field>File_Name__c</field>
            <operation>equals</operation>
            <value>ARCINVC_2020-06-24-23-00-00.csv</value>
        </filters>
        <label>CFS Daily Searches</label>
    </listViews>
    <listViews>
        <fullName>RCO</fullName>
        <columns>NAME</columns>
        <columns>Sequence_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_System__c</field>
            <operation>equals</operation>
            <value>RCO</value>
        </filters>
        <label>RCO</label>
    </listViews>
    <nameField>
        <label>Integration Files Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>